@@ -1,5 +1,7 @@
 2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
 
+	* capplet-util.h: Don't #include bonobo*.h
+
 	* gconf-property-editor.c (peditor_string_widget_changed): Use
 	actual signature for the changed signal Use gconf_client rather
 	than gconf_engine
